Bug em favicon e overflow de codigos pre

--- a/core/static/core/css/almarinho.css
+++ b/core/static/core/css/almarinho.css
@@ -112,7 +112,7 @@ a:hover{
 	display:block;
 	padding: 10px;
 	background:#FAFAFA;
-	overflow: scroll;
+	overflow: auto;
 }
 
 
